Pushed changes to graph and routing